# Multi_Agent_AI

./: .env.example  AI_Agent_Backend_README.md  AI_Agent_Frontend_README.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py
app/agents/: graph.py  tools.py
app/api/: routes.py
app/auth/: rbac.py
app/core/: db.py
k8s/base/: deployment.yaml  service.yaml
k8s/overlays/production/: hpa.yaml  kustomization.yaml
